# Recruitment

./: package-lock.json
client/: package-lock.json  package.json
client/src/: App.tsx  WebSocketClient.tsx
mysql/: Dockerfile
server/: main.py  pyproject.toml
